--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
   "private": true,
   "workspaces": {
     "packages":["packages/*"]
+  },
+  "scripts": {
+    "start:server":"cd ./packages/server && yarn dev",
+    "start:web":"cd ./packages/web && yarn start"
   }
 }
