--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,14 +5,16 @@
   "license": "MIT",
   "scripts": {
     "tsc": "tsc",
-    "dev":"ts-node-dev src/server.ts"
+    "dev": "ts-node-dev src/server.ts"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
     "graphql": "^15.4.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.8",
     "@types/express": "^4.17.9",
     "ts-node": "^9.0.0",
     "ts-node-dev": "^1.0.0",
