--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.12.3",
+    "@captalys-platform/core": "^1.34.0",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.2",
     "@svgr/webpack": "5.4.0",
     "@testing-library/jest-dom": "^5.11.4",
@@ -64,6 +65,7 @@
     "sass-loader": "8.0.2",
     "semver": "7.3.2",
     "style-loader": "1.3.0",
+    "styled-components": "^5.2.1",
     "terser-webpack-plugin": "4.2.3",
     "ts-pnp": "1.2.0",
     "typescript": "^4.0.3",
@@ -160,6 +162,8 @@
     "presets": [
       "react-app"
     ],
-    "plugins":["relay"]
+    "plugins": [
+      "relay"
+    ]
   }
 }
